src/test/resources/fails/exc1.s
// Invalid compile specification
compile something-else
main:
end